--- a/Social_media_fake_news_detection.ipynb
+++ b/Social_media_fake_news_detection.ipynb
@@ -88,10 +88,10 @@
     "        Class constructor or initialization method. \n",
     "        '''\n",
     "        # keys and tokens from the Twitter Dev Console \n",
-    "        consumer_key = 'rbA1W2pwMmVAxkTljAMncPCgA'\n",
-    "        consumer_secret = 'QRaVtZBnHB6B65DhdffjdmJh5Yqvpd4QfmwK0GoSf7OhNvjFmU'\n",
-    "        access_token = '1037630534686466048-yerSFRAEumikdvN95xOcGZ5lQCrBB2'\n",
-    "        access_token_secret = 'TYxq7DHenPmUazoD25biP6ormCchl4sFFMQGdKzlS2k5c'\n",
+    "        consumer_key = 'key'\n",
+    "        consumer_secret = 'secret'\n",
+    "        access_token = 'token'\n",
+    "        access_token_secret = 'secret'\n",
     "        \n",
     "        # attempt authentication \n",
     "        try: \n",
